--- a/web/Web/authorization/index.html
+++ b/web/Web/authorization/index.html
@@ -59,7 +59,7 @@ Output: <label>{{output.text}}</label>
   <h1 class="form-signin-heading">Sign In</h1>
 
   <input type="text" class="form-control" name='username' placeholder="echo.User name" required="" autofocus="" ng-model="username.text">
-  <input type="text" class="form-control" name='password' placeholder="Password" required="" ng-model="password.text">
+  <input type="password" class="form-control" name='password' placeholder="Password" required="" ng-model="password.text">
   <button class="btn btn-lg btn-primary btn-block" type="submit" value="mlogin" ng-click="mlogin()">
     Sign In
   </button>
